# FCG

./: .gitignore
Laboratori/Editor di Testo/src/: my_editor.cpp
Laboratori/Laboratorio 3/: CMakeLists.txt
Laboratori/Laboratorio 3/src/: 00_hello.cpp
Laboratori/Vertex/: CMakeLists.txt
SFML/: CMakeLists.txt  README.md
SFML/src/: main_animated_sprite_smooth.cpp  main_animated_sprite_step.cpp  main_convex_texture.cpp  main_sprite.cpp  main_star.cpp
